popouts fixed on mobile (iOS tested)

--- a/public/css/popout.css
+++ b/public/css/popout.css
@@ -169,6 +169,7 @@
     transition: right 0.7s;
 }
 
+/* open menu */
 .menu-container:hover{
 	right: 0vw !important;
 }
@@ -179,7 +180,7 @@
 	height: 100vh;
 	overflow: hidden;
 	transition: width 0.7s;
-	padding: 2em 0;
+	padding: 2em 0 0 1em;
 	right: 0;
 }
 
@@ -227,5 +228,12 @@
 		text-decoration: none;
 		color: red;
 		display: block;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.menu-container {
+		right: -80vw;
+		width: 80vw;
 	}
 }
